--- a/faq.css
+++ b/faq.css
@@ -22,7 +22,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 30%;
-    background-image: url(/exampls/exer/background-pattern-desktop.svg);
+    background-image: url("/exampls/exer/background-pattern-desktop.svg");
     background-size: cover;
     background-position: top center;
     z-index: -1;
