--- a/faq.css
+++ b/faq.css
@@ -22,7 +22,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 30%;
-    background-image: url("./background-pattern-desktop.svg");
+    background-image: url("/background-pattern-desktop.svg");
     background-size: cover;
     background-position: top center;
     z-index: -1;
@@ -43,7 +43,7 @@ body::after {
 .container {
     width: 95%;
     max-width: 700px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
@@ -64,7 +64,7 @@ body::after {
 }
 
 .wrapper {
-  background-color: none;
+    background-color: none;
     margin-bottom: 0;
     padding: 15px 20px;
     /* border-radius: 5px; */
